<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/txtIp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_options_ip"
                android:textSize="@dimen/font_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtIp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_options_ip"
                android:textSize="@dimen/font_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtIp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_options_ip"
                android:textSize="@dimen/font_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtIp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_options_ip"
                android:textSize="@dimen/font_size"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_options_status"
                android:textSize="@dimen/font_size"
                android:gravity="center"
                />

            <Button
                android:id="@+id/btnOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_open"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_stop"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_close"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btnOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_options"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>